--- a/php/composer.json
+++ b/php/composer.json
@@ -6,7 +6,12 @@
         "php": "^7.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0.0"
+        "phpunit/phpunit": "^8.0.0",
+        "phpstan/phpstan": "^0.12.25",
+        "phpstan/phpstan-phpunit": "^0.12.10",
+        "symplify/easy-coding-standard": "^7.3",
+        "symplify/phpstan-extensions": "^7.3",
+        "rector/rector": "0.7.26"
     },
     "autoload": {
         "psr-4": {
